--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="header-left">
         <img
-          class="weather-icon"
+          class="weather-icon large"
           src="./icons/sun.svg"
           alt="Sun"
           data-current-icon
